update: clean up code